consolidate component colors

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -3,6 +3,9 @@
         <p class="mb-0">
             Current version: {{ site.current_version }}
         </p>
+        <p>
+            <a href="{{site.baseurl }}/migration/">Migration Notes (in progress)</a>
+        </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
             <li><a href="{{ site.baseurl }}/about/overview/">About</a></li>
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
