--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -41,7 +41,7 @@
         color: $pagination-hover-color;
         text-decoration: none;
         background-color: $pagination-hover-bg;
-        border-color: $pagination-hover-border;
+        border-color: $pagination-hover-border-color;
     }
 
     &.active {
