--- a/scss/functions/_color-util.scss
+++ b/scss/functions/_color-util.scss
@@ -42,7 +42,7 @@
     @each $theme, $color in $map {
         // Color adjustments
         $control-bg:                 palette($color, $level-control-bg);
-        $control-color:              color-contrast($control-bg);
+        $control-color:              color-auto-contrast($control-bg);
         $control-border-color:       palette($color, $level-control-border-color);
         $control-hover-bg:           palette($color, $level-control-hover-bg);
         $control-hover-color:        color-if-contrast($control-color, $control-hover-bg);
