--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -474,7 +474,6 @@ $btn-focus-box-shadow:      0 0 2px 3px rgba(palette-context("info", 300), .75) 
 $btn-active-box-shadow:     inset 0 .125rem .25rem rgba(0, 0, 0, .25) !default;
 
 $btn-outline-bg:            transparent !default;
-$btn-outline-hover-color:   $white !default;
 
 $btn-disabled-opacity:      .6 !default;
 
@@ -870,27 +869,27 @@ $media-margin-y:                1rem !default;
 
 // Cards
 // =====
-$card-spacer-x:            1.25rem !default;
-$card-spacer-y:            1rem !default;
-$card-border-width:        $border-width !default;
-$card-border-radius:       $border-radius !default;
-$card-inner-border-radius: calc(#{$card-border-radius} - #{$card-border-width}) !default;
-$card-border-color:        $component-overlay-border-color !default;
-$card-cap-bg:              $component-section-bg !default;
-$card-cap-border-color:    $component-section-border-color !default;
-$card-bg:                  $component-bg !default;
+$card-padding-y:            .75rem !default;
+$card-padding-x:            1rem !default;
+$card-margin-bottom:        1rem !default;
+$card-bg:                   $component-bg !default;
+$card-border-color:         $component-overlay-border-color !default;
+$card-border-width:         $border-width !default;
+$card-border-radius:        $border-radius !default;
+$card-inner-border-radius:  calc(#{$card-border-radius} - #{$card-border-width}) !default;
 
-$card-inverse-color:            rgba(255, 255, 255, .65) !default;
-$card-inverse-cap-border-color: rgba(255, 255, 255, .2) !default;
-$card-inverse-link-color:       rgba(255, 255, 255, .8) !default;
-$card-inverse-link-hover-color: $white !default;
+$card-link-margin-left:     1.25rem !default;
 
-$card-padding-y:           .75rem !default;
-$card-padding-x:           1rem !default;
-$card-cap-padding-y:       .75rem !default;
-$card-cap-padding-x:       1rem !default;
+$card-cap-padding-y:        .75rem !default;
+$card-cap-padding-x:        1rem !default;
 
-$card-img-overlay-padding: $card-padding-y $card-padding-x !default;
+$card-title-margin-bottom:  1rem !default;
+$card-subtitle-margin-top:  -.5rem !default;
+
+$card-cap-bg:               $component-section-bg !default;
+$card-cap-border-color:     $component-section-border-color !default;
+
+$card-img-overlay-padding:  $card-padding-y $card-padding-x !default;
 
 $card-deck-gutter-widths: (
     xs: map-get($grid-gutter-widths, xs),
