Remove focus `box-shadow` from btn and form controls
It seems, at least personally, that I am almost always turning this off and adding a focus/hover color.
Visually it is great when put on a light color background, such as the default body background color, but when used on a dark background, they just dont seem to work well.

So we are going back to having a consolidated hover/focus coloring.

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -266,7 +266,7 @@ $mark-padding-x:    .25rem !default;
 $mark-bg:           #ff0 !default;
 
 $hr-spacer-y:       1rem !default;
-$hr-border-color:   rgba(0, 0, 0, .1) !default;
+$hr-border-color:   rgba($black, .1) !default;
 $hr-border-width:   $border-width !default;
 
 $blockquote-font-size:          ($font-size-base * 1.1875) !default;
@@ -404,7 +404,7 @@ $thumbnail-bg:                  $body-bg !default;
 $thumbnail-border-width:        $border-width !default;
 $thumbnail-border-color:        $uibase-300 !default;
 $thumbnail-border-radius:       $border-radius !default;
-$thumbnail-box-shadow:          0 .0625rem .125rem rgba(0, 0, 0, .075) !default;
+$thumbnail-box-shadow:          0 .0625rem .125rem rgba($black, .075) !default;
 
 
 // Responsive embed
@@ -422,7 +422,7 @@ $code-bg:                   $uibase-50 !default;
 
 $kbd-color:                 $uibase-50 !default;
 $kbd-bg:                    $uibase-900 !default;
-$kbd-box-shadow:            inset 0 -.1rem 0 rgba(0, 0, 0, .25) !default;
+$kbd-box-shadow:            inset 0 -.1rem 0 rgba($black, .25) !default;
 $kbd-nested-font-weight:    $font-weight-bold !default;
 $kbd-border-radius:         .2rem !default;
 
@@ -469,9 +469,8 @@ $btn-padding-x:             .75rem !default;
 $btn-font-weight:           $font-weight-normal !default;
 $btn-line-height:           1.25 !default;
 $btn-border-radius:         $border-radius !default;
-$btn-box-shadow:            inset 0 .125rem .25rem rgba(255, 255, 255, .25) !default;
-$btn-focus-box-shadow:      0 0 2px 3px rgba(palette-context("info", 300), .75) !default; // px because simulating outline
-$btn-active-box-shadow:     inset 0 .125rem .25rem rgba(0, 0, 0, .25) !default;
+$btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 1px 1px rgba($black, .075) !default;
+$btn-active-box-shadow:     inset 0 .125em .25em rgba($black, .25), $btn-box-shadow !default;
 
 $btn-outline-bg:            transparent !default;
 
@@ -486,6 +485,7 @@ $btn-default-hover-bg:              $uibase-100 !default;
 $btn-default-hover-color:           color-if-contrast($uibase-600, $btn-default-hover-bg) !default;
 $btn-default-hover-border-color:    $uibase-400 !default;
 $btn-default-active-hover-bg:       $uibase-200 !default;
+$btn-default-active-hover-color:    color-if-contrast($btn-default-hover-color, $btn-default-active-hover-bg) !default;
 
 
 // Forms
@@ -501,16 +501,15 @@ $input-padding-x:               $btn-padding-x !default;
 
 $input-color:                   $uibase-700 !default;
 $input-bg:                      $white !default;
-$input-border-color:            rgba(0, 0, 0, .25) !default;
+$input-border-color:            rgba($black, .25) !default;
 $input-border-width:            $border-width !default;
 $input-border-radius:           $border-radius !default;
-$input-box-shadow:              inset 0 .125rem .125rem rgba(0, 0, 0, .1) !default;
+$input-box-shadow:              inset 0 .125em .125em rgba($black, .1) !default;
 
 $input-focus-color:             $input-color !default;
 $input-focus-bg:                $input-bg !default;
-$input-focus-border-color:      palette-context("info", 300) !default;
-$input-focus-box-shadow-outer:  $btn-focus-box-shadow !default;
-$input-focus-box-shadow-inner:  inset 0 .125rem .125rem rgba(0, 0, 0, .15) !default;
+$input-focus-border-color:      palette-context("primary", 300) !default;
+$input-focus-box-shadow:        inset 0 .125em .125em rgba($black, .15) !default;
 
 $input-disabled-color:          $component-disabled-color !default;
 $input-disabled-bg:             $uibase-50 !default;
@@ -560,7 +559,7 @@ $custom-control-spacer-y:               .5rem !default;
 $custom-control-indicator-size:         1rem !default;
 $custom-control-indicator-bg:           $uibase-50 !default;
 $custom-control-indicator-bg-size:      50% 50% !default;
-$custom-control-indicator-box-shadow:   inset 0 .25rem .25rem rgba(0, 0, 0, .1) !default;
+$custom-control-indicator-box-shadow:   inset 0 .25rem .25rem rgba($black, .1) !default;
 $custom-control-indicator-border-width: $border-width !default;
 $custom-control-indicator-border-color: $input-border-color !default;
 
@@ -619,8 +618,7 @@ $switch-active-control-bg:              $uibase-50 !default;
 $switch-active-indicator-bg:            $uibase-400 !default;
 
 $switch-focus-control-border-color:     $input-focus-border-color !default;
-$switch-focus-control-box-shadow-outer: $input-focus-box-shadow-outer !default;
-$switch-focus-control-box-shadow-inner: $input-focus-box-shadow-inner !default;
+$switch-focus-control-box-shadow:       $input-focus-box-shadow !default;
 
 $switch-disabled-description-color:     $uibase-400 !default;
 $switch-disabled-cursor:                $cursor-disabled !default;
@@ -636,11 +634,11 @@ $progress-height:               1rem !default;
 $progress-font-size:            ($font-size-base * .75) !default;
 $progress-bg:                   $uibase-50 !default;
 $progress-border-radius:        $border-radius !default;
-$progress-box-shadow:           inset 0 .125rem .125rem rgba(0, 0, 0, .1) !default;
+$progress-box-shadow:           inset 0 .125rem .125rem rgba($black, .1) !default;
 $progress-bar-color:            $white !default;
 $progress-bar-bg:               $uibase-300 !default;
 $progress-bar-animation-timing: 1s linear infinite !default;
-$progress-bar-box-shadow:       inset 0 -.125rem 0 rgba(0, 0, 0, .1) !default;
+$progress-bar-box-shadow:       inset 0 -.125rem 0 rgba($black, .1) !default;
 
 
 // List group
@@ -719,7 +717,7 @@ $dropdown-border-radius:        $border-radius !default;
 $dropdown-divider-width:        $border-width !default;
 $dropdown-divider-color:        $component-section-border-color !default;
 $dropdown-divider-spacer:       ($spacer / 2) !default;
-$dropdown-box-shadow:           0 .2rem .3rem rgba(0, 0, 0, .175) !default;
+$dropdown-box-shadow:           0 .2rem .3rem rgba($black, .175) !default;
 
 // Border radius where menu/submenu aligns or 'attaches' to control item.
 $dropdown-attach-border-radius: 0 !default;
@@ -791,7 +789,7 @@ $navbar-brand-font-size:            ($font-size-base * 1.25) !default;
 $navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-width:              $border-width !default;
-$navbar-divider-color:              rgba(0, 0, 0, .65) !default;
+$navbar-divider-color:              rgba($black, .65) !default;
 $navbar-divider-margin-x:           $navbar-item-padding-x !default;
 $navbar-divider-margin-y:           $navbar-item-padding-y !default;
 
@@ -800,19 +798,19 @@ $navbar-toggle-padding-y:           $btn-padding-y !default;
 $navbar-toggle-padding-x:           $btn-padding-x !default;
 $navbar-toggle-border-radius:       $btn-border-radius !default;
 
-$navbar-dark-color:                 rgba(255, 255, 255, .65) !default;
-$navbar-dark-hover-color:           rgba(255, 255, 255, .9) !default;
-$navbar-dark-active-color:          rgba(255, 255, 255, .95) !default;
-$navbar-dark-disabled-color:        rgba(255, 255, 255, .5) !default;
-$navbar-dark-divider-color:         rgba(255, 255, 255, .7) !default;
-$navbar-dark-toggle-border:         rgba(255, 255, 255, .35) !default;
+$navbar-dark-color:                 rgba($white, .65) !default;
+$navbar-dark-hover-color:           rgba($white, .9) !default;
+$navbar-dark-active-color:          rgba($white, .95) !default;
+$navbar-dark-disabled-color:        rgba($white, .5) !default;
+$navbar-dark-divider-color:         rgba($white, .7) !default;
+$navbar-dark-toggle-border:         rgba($white, .35) !default;
 
-$navbar-light-color:                rgba(0, 0, 0, .6) !default;
-$navbar-light-hover-color:          rgba(0, 0, 0, .85) !default;
-$navbar-light-active-color:         rgba(0, 0, 0, .95) !default;
-$navbar-light-disabled-color:       rgba(0, 0, 0, .5) !default;
-$navbar-light-divider-color:        rgba(0, 0, 0, .65) !default;
-$navbar-light-toggle-border:        rgba(0, 0, 0, .35) !default;
+$navbar-light-color:                rgba($black, .6) !default;
+$navbar-light-hover-color:          rgba($black, .85) !default;
+$navbar-light-active-color:         rgba($black, .95) !default;
+$navbar-light-disabled-color:       rgba($black, .5) !default;
+$navbar-light-divider-color:        rgba($black, .65) !default;
+$navbar-light-toggle-border:        rgba($black, .35) !default;
 
 
 // Jumbotron
@@ -930,7 +928,7 @@ $popover-border-width:          $border-width !default;
 $popover-border-color:          $component-overlay-border-color !default;
 $popover-border-radius:         .3125rem !default;
 $popover-inner-border-radius:   calc(#{$popover-border-radius} - #{$popover-border-width}) !default;
-$popover-box-shadow:            0 .2rem .3rem rgba(0, 0, 0, .175) !default;
+$popover-box-shadow:            0 .2rem .3rem rgba($black, .175) !default;
 
 $popover-header-padding-y:      .75rem !default;
 $popover-header-padding-x:      1rem !default;
@@ -970,15 +968,15 @@ $modal-inner-padding-x:         1rem !default;
 $modal-content-bg:               $component-bg !default;
 $modal-content-border-color:     $component-overlay-border-color !default;
 $modal-content-border-width:     $border-width !default;
-$modal-content-xs-box-shadow:    0 .2rem .6rem rgba(0, 0, 0, .5) !default;
-$modal-content-sm-up-box-shadow: 0 .3rem 1rem rgba(0, 0, 0, .5) !default;
+$modal-content-xs-box-shadow:    0 .2rem .6rem rgba($black, .5) !default;
+$modal-content-sm-up-box-shadow: 0 .3rem 1rem rgba($black, .5) !default;
 
 $modal-footer-padding-y:        .75rem !default;
 $modal-footer-padding-x:        1rem !default;
 
 $modal-backdrop-bg:             $dark !default;
 $modal-backdrop-opacity:        .5 !default;
-$modal-header-border-color:     rgba(0, 0, 0, .1) !default;
+$modal-header-border-color:     rgba($black, .1) !default;
 $modal-footer-border-color:     $modal-header-border-color !default;
 $modal-header-border-width:     $modal-content-border-width !default;
 $modal-footer-border-width:     $modal-header-border-width !default;
@@ -1020,8 +1018,8 @@ $slider-track-border-radius:        $border-radius !default;
 
 $slider-selection-bg:               $uibase-300 !default;
 
-$slider-thumb-shadow:               inset .125rem .125rem .125rem rgba(255, 255, 255, .4), inset -.125rem -.125rem .125rem rgba(0, 0, 0, .15) !default;
-$slider-track-shadow:               inset 0 .0625rem .125rem rgba(0, 0, 0, .1) !default;
+$slider-thumb-shadow:               inset .125rem .125rem .125rem rgba($white, .4), inset -.125rem -.125rem .125rem rgba($black, .15) !default;
+$slider-track-shadow:               inset 0 .0625rem .125rem rgba($black, .1) !default;
 
 $slider-disabled-track-opacity:     .75 !default;
 $slider-disabled-thumb-opacity:     .9 !default;
