--- a/scss/core/_custom-forms.scss
+++ b/scss/core/_custom-forms.scss
@@ -26,12 +26,7 @@
     }
 
     &:focus ~ .custom-control-indicator {
-        // the mixin is not used here to make sure there is feedback
-        @if ($enable-shadows) {
-            box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-        } @else {
-            box-shadow: $input-focus-box-shadow-outer;
-        }
+        @include box-shadow($input-focus-box-shadow);
     }
 
     &:active ~ .custom-control-indicator {
@@ -139,7 +134,7 @@
     } @else {
         border-radius: 0;
     }
-    @include box-shadow($input-box-shadow, 0 0 transparent);
+    @include box-shadow($input-box-shadow);
     @include transition($input-transition);
     appearance: none;
 
@@ -149,11 +144,7 @@
         border-color: $input-focus-border-color;
         outline: 0;
 
-        @if ($enable-shadows) {
-            box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-        } @else {
-            box-shadow: $input-focus-box-shadow-outer;
-        }
+        @include box-shadow($input-focus-box-shadow);
 
         &::-ms-value {
             // For visual consistency with other platforms/browsers,
@@ -224,11 +215,11 @@
 
     &:focus ~ .custom-file-control {
         border-color: $input-focus-border-color;
-        @if ($enable-shadows) {
-            box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-        } @else {
-            box-shadow: $input-focus-box-shadow-outer;
-        }
+        @include box-shadow($input-focus-box-shadow);
+    }
+
+    &:focus ~ .custom-file-control::before {
+        @include box-shadow($btn-box-shadow);
     }
 }
 
@@ -249,7 +240,7 @@
     background-clip: padding-box;
     border: $input-border-width solid $input-border-color;
     @include border-radius($input-border-radius);
-    @include box-shadow($input-box-shadow, 0 0 transparent);
+    @include box-shadow($input-box-shadow);
     @include transition($input-transition);
 
     &:empty::after {
@@ -275,6 +266,7 @@
         content: map-get(map-get($custom-file-text, button-label), en);
         background-color: $custom-file-button-bg;
         border-left: $input-border-width solid $input-border-color;
+        @include box-shadow($btn-box-shadow);
     }
 
     @each $lang, $text in map-get($custom-file-text, button-label) {
@@ -300,7 +292,7 @@
     border: $input-border-width solid $input-border-color;
 
     @include border-radius($input-border-radius);
-    @include box-shadow($input-box-shadow, 0 0 transparent);
+    @include box-shadow($input-box-shadow);
     @include transition($input-transition);
 
     @include form-control-focus();
