--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -15,7 +15,7 @@
     border: $input-border-width solid $input-border-color;
     // Note: This has no effect on <select>s in some browsers, due to the limited stylability of `<select>`s in CSS.
     @include border-radius($input-border-radius);
-    @include box-shadow($input-box-shadow, 0 0 transparent);
+    @include box-shadow($input-box-shadow);
     @include transition($input-transition);
 
     // Unstyle the caret on `<select>`s in IE10+.
@@ -36,11 +36,7 @@
 
     &:focus,
     &.focus {
-        @if ($enable-shadows) {
-            box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-        } @else {
-            box-shadow: $input-focus-box-shadow-outer;
-        }
+        @include box-shadow($input-focus-box-shadow);
     }
 
     // Disabled and read-only inputs
