--- a/scss/mixins/_forms.scss
+++ b/scss/mixins/_forms.scss
@@ -24,11 +24,7 @@
 
         &:focus {
             border-color: $border-hover;
-            @if ($enable-shadows) {
-                box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-            } @else {
-                box-shadow: $input-focus-box-shadow-outer;
-            }
+            @include box-shadow($input-focus-box-shadow);
         }
     }
 
@@ -58,10 +54,6 @@
         background-color: $input-focus-bg;
         border-color: $input-focus-border-color;
         outline: 0;
-        @if ($enable-shadows) {
-            box-shadow: $input-focus-box-shadow-inner, $input-focus-box-shadow-outer;
-        } @else {
-            box-shadow: $input-focus-box-shadow-outer;
-        }
+        @include box-shadow($input-focus-box-shadow);
     }
 }
